--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -69,5 +69,6 @@
     "confirmAcceptLesson": "هل أنت متأكد أنك تريد قبول الدرس؟",
     "acceptLesson": "قبول الدرس",
     "confirmRejectLesson": "هل أنت متأكد أنك تريد رفض الدرس؟",
-    "rejectLesson": "رفض الدرس"
+    "rejectLesson": "رفض الدرس",
+    "refresh": "تحديث"
 }
