--- a/lib/l10n/app_he.arb
+++ b/lib/l10n/app_he.arb
@@ -69,5 +69,6 @@
     "confirmAcceptLesson": "האם אתה בטוח שברצונך לקבל את השיעור?",
     "acceptLesson": "קבל שיעור",
     "confirmRejectLesson": "האם אתה בטוח שברצונך לדחות את השיעור?",
-    "rejectLesson": "דחה שיעור"
+    "rejectLesson": "דחה שיעור",
+    "refresh": "רענן"
 }
