lesson subject and student grade

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -70,5 +70,31 @@
     "acceptLesson": "قبول الدرس",
     "confirmRejectLesson": "هل أنت متأكد أنك تريد رفض الدرس؟",
     "rejectLesson": "رفض الدرس",
-    "refresh": "تحديث"
+    "refresh": "تحديث",
+    "subjectMath": "الرياضيات",
+    "subjectEnglish": "الإنجليزية",
+    "subjectHebrew": "العبرية",
+    "subjectArabic": "العربية",
+    "subjectHistory": "التاريخ",
+    "subjectGeography": "الجغرافيا",
+    "subjectPhysics": "الفيزياء",
+    "subjectChemistry": "الكيمياء",
+    "subjectBiology": "بيولوجيا",
+    "subjectComputerScience": "علوم الحاسوب",
+    "subjectOther": "أخرى",
+    "gradeFirst": "الصف الأول",
+    "gradeSecond": "الصف الثاني",
+    "gradeThird": "الصف الثالث",
+    "gradeFourth": "الصف الرابع",
+    "gradeFifth": "الصف الخامس",
+    "gradeSixth": "الصف السادس",
+    "gradeSeventh": "الصف السابع",
+    "gradeEighth": "الصف الثامن",
+    "gradeNinth": "الصف التاسع",
+    "gradeTenth": "الصف العاشر",
+    "gradeEleventh": "الصف الحادي عشر",
+    "gradeTwelfth": "الصف الثاني عشر",
+    "gradeOther": "أخرى",
+    "subjectHint": "اختر موضوع الدرس",
+    "gradeHint": "اختر صف الطالب"
 }
