--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -70,5 +70,31 @@
     "acceptLesson": "Accept Lesson",
     "confirmRejectLesson": "Are you sure you want to reject the lesson?",
     "rejectLesson": "Reject Lesson",
-    "refresh": "Refresh"
+    "refresh": "Refresh",
+    "subjectMath": "Math",
+    "subjectEnglish": "English",
+    "subjectHebrew": "Hebrew",
+    "subjectArabic": "Arabic",
+    "subjectHistory": "History",
+    "subjectGeography": "Geography",
+    "subjectPhysics": "Physics",
+    "subjectChemistry": "Chemistry",
+    "subjectBiology": "Biology",
+    "subjectComputerScience": "Computer Science",
+    "subjectOther": "Other",
+    "gradeFirst": "First Grade",
+    "gradeSecond": "Second Grade",
+    "gradeThird": "Third Grade",
+    "gradeFourth": "Fourth Grade",
+    "gradeFifth": "Fifth Grade",
+    "gradeSixth": "Sixth Grade",
+    "gradeSeventh": "Seventh Grade",
+    "gradeEighth": "Eighth Grade",
+    "gradeNinth": "Ninth Grade",
+    "gradeTenth": "Tenth Grade",
+    "gradeEleventh": "Eleventh Grade",
+    "gradeTwelfth": "Twelfth Grade",
+    "gradeOther": "Other",
+    "subjectHint": "Select the subject of the lesson",
+    "gradeHint": "Select the grade of the student"
 }
