--- a/lib/l10n/app_he.arb
+++ b/lib/l10n/app_he.arb
@@ -70,5 +70,31 @@
     "acceptLesson": "קבל שיעור",
     "confirmRejectLesson": "האם אתה בטוח שברצונך לדחות את השיעור?",
     "rejectLesson": "דחה שיעור",
-    "refresh": "רענן"
+    "refresh": "רענן",
+    "subjectMath": "מתמטיקה",
+    "subjectEnglish": "אנגלית",
+    "subjectHebrew": "עברית",
+    "subjectArabic": "ערבית",
+    "subjectHistory": "היסטוריה",
+    "subjectGeography": "גיאוגרפיה",
+    "subjectPhysics": "פיזיקה",
+    "subjectChemistry": "כימיה",
+    "subjectBiology": "ביולוגיה",
+    "subjectComputerScience": "מדעי המחשב",
+    "subjectOther": "אחר",
+    "gradeFirst": "כיתה א'",
+    "gradeSecond": "כיתה ב'",
+    "gradeThird": "כיתה ג'",
+    "gradeFourth": "כיתה ד'",
+    "gradeFifth": "כיתה ה'",
+    "gradeSixth": "כיתה ו'",
+    "gradeSeventh": "כיתה ז'",
+    "gradeEighth": "כיתה ח'",
+    "gradeNinth": "כיתה ט'",
+    "gradeTenth": "כיתה י'",
+    "gradeEleventh": "כיתה י\"א",
+    "gradeTwelfth": "כיתה י\"ב",
+    "gradeOther": "אחר",
+    "subjectHint": "בחר את נושא השיעור",
+    "gradeHint": "בחר את כיתת התלמיד"
 }
