payment + foreground awareness + loading blocks PopScope

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -49,7 +49,7 @@
     "selectDuration": "اختر المدة",
     "minutes": "{minutes} دقيقة",
     "hours": "{hours} ساعة",
-    "confirmAndPay": "التالي",
+    "confirmAndPay": "تأكيد والمتابعة إلى الدفع",
     "confirmLeavePaymentPage": "هل أنت متأكد أنك تريد المغادرة؟ سيتم إلغاء طلبك.",
     "leave": "مغادرة",
     "myLessons": "دروسي",
@@ -128,5 +128,27 @@
     "mustAgreeTerms": "يجب عليك الموافقة على الشروط والأحكام",
     "invalidCouponCode": "رمز القسيمة غير صالح",
     "next": "التالي",
-    "overlappingLessons": "يتداخل الدرس مع درس آخر، يرجى اختيار وقت مختلف"
+    "overlappingLessons": "يتداخل الدرس مع درس آخر، يرجى اختيار وقت مختلف",
+    "requestAccountDeletion": "طلب حذف الحساب",
+    "orderLessonType": "يرجى تحديد نوع الدرس الذي تريد طلبه",
+    "immediateLesson": "الحصول على درس الآن",
+    "scheduleLesson": "جدولة درس في وقت لاحق (موصى به)",
+    "liveLesson": "درس مباشر",
+    "couldntOpenEmail": "تعذر فتح تطبيق البريد، تم نسخ عنوان البريد إلى الحافظة بدلاً من ذلك.",
+    "sendEmail": "إرسال بريد إلكتروني",
+    "couldntOpenWhatsApp": "تعذر فتح واتساب، تم نسخ رقم الهاتف إلى الحافظة بدلاً من ذلك.",
+    "messageOnWhatsApp": "إرسال رسالة عبر واتساب",
+    "businessAddress": "العنوان الفعلي للعمل:\n{address},\n{address2}",
+    "deleteAccountDescription": "لحذف حسابك، يرجى الاتصال بنا عبر البريد الإلكتروني أو واتساب.",
+    "lessonURLCopied": "تم نسخ رابط الدرس إلى الحافظة",
+    "copyLessonURL": "نسخ رابط الدرس",
+    "joinLesson": "انضم إلى الدرس",
+    "joinLiveLesson": "انضم إلى الدرس المباشر",
+    "lessonStartsAt": "يبدأ الدرس في {dateTime}",
+    "waitingForTeacher": "سيتم تعيين معلم لك قريبًا، يرجى الانتظار...",
+    "timeoutException": "انتهت مدة الطلب، يرجى المحاولة مرة أخرى لاحقًا.",
+    "liveLessonExists": "لديك بالفعل درس مباشر جاري.",
+    "failedToConfirmOrder": "فشل تأكيد الطلب. يرجى المحاولة مرة أخرى.",
+    "cantCancelAlreadyStarted": "لا يمكن إلغاء درس بدأ بالفعل.",
+    "lessonAlreadyAccepted": "تم قبول هذا الدرس بالفعل من قبل معلم."
 }
