--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -49,7 +49,7 @@
     "selectDuration": "Select duration",
     "minutes": "{minutes} minutes",
     "hours": "{hours} hours",
-    "confirmAndPay": "Next",
+    "confirmAndPay": "Confirm and proceed to payment",
     "confirmLeavePaymentPage": "Are you sure you want to leave? Your order will be cancelled.",
     "leave": "Leave",
     "myLessons": "My Lessons",
@@ -128,5 +128,27 @@
     "mustAgreeTerms": "You must agree to the Terms and Conditions",
     "invalidCouponCode": "Invalid coupon code",
     "next": "Next",
-    "overlappingLessons": "The lesson overlaps with another lesson, please select a different time"
+    "overlappingLessons": "The lesson overlaps with another lesson, please select a different time",
+    "requestAccountDeletion": "Request Account Deletion",
+    "orderLessonType": "Please select the type of lesson you want to order",
+    "immediateLesson": "Get a lesson right now",
+    "scheduleLesson": "Schedule a lesson for a later time (Recommended)",
+    "liveLesson": "Live Lesson",
+    "couldntOpenEmail": "Could not open email app, copied email address to clipboard instead.",
+    "sendEmail": "Send Email",
+    "couldntOpenWhatsApp": "Could not open WhatsApp, copied phone number to clipboard instead.",
+    "messageOnWhatsApp": "Message on WhatsApp",
+    "businessAddress": "Business Physical Address:\n{address},\n{address2}",
+    "deleteAccountDescription": "To delete your account, please contact us via email or WhatsApp.",
+    "lessonURLCopied": "Lesson URL copied to clipboard",
+    "copyLessonURL": "Copy Lesson URL",
+    "joinLesson": "Join Lesson",
+    "joinLiveLesson": "Join Live Lesson",
+    "lessonStartsAt": "Lesson starts at {dateTime}",
+    "waitingForTeacher": "A teacher will be assigned to you shortly, please wait...",
+    "timeoutException": "Request timed out. Please try again later.",
+    "liveLessonExists": "You already have an ongoing live lesson.",
+    "failedToConfirmOrder": "Failed to confirm order. Please try again.",
+    "cantCancelAlreadyStarted": "Cannot cancel a lesson that has already started.",
+    "lessonAlreadyAccepted": "This lesson has already been accepted by a teacher."
 }
