--- a/lib/l10n/app_he.arb
+++ b/lib/l10n/app_he.arb
@@ -49,7 +49,7 @@
     "selectDuration": "בחר משך זמן",
     "minutes": "{minutes} דקות",
     "hours": "{hours} שעות",
-    "confirmAndPay": "הבא",
+    "confirmAndPay": "אשר והמשך לתשלום",
     "confirmLeavePaymentPage": "האם אתה בטוח שברצונך לעזוב? ההזמנה שלך תבוטל.",
     "leave": "עזוב",
     "myLessons": "השיעורים שלי",
@@ -128,5 +128,27 @@
     "mustAgreeTerms": "עליך להסכים לתנאים וההגבלות",
     "invalidCouponCode": "קוד קופון לא חוקי",
     "next": "הבא",
-    "overlappingLessons": "השיעור מתנגש עם שיעור אחר, אנא בחר זמן שונה"
+    "overlappingLessons": "השיעור מתנגש עם שיעור אחר, אנא בחר זמן שונה",
+    "requestAccountDeletion": "בקשה למחיקת חשבון",
+    "orderLessonType": "בחר את סוג השיעור שברצונך להזמין",
+    "immediateLesson": "קבל שיעור עכשיו",
+    "scheduleLesson": "תזמן שיעור לזמן מאוחר יותר (מומלץ)",
+    "liveLesson": "שיעור חי",
+    "couldntOpenEmail": "לא ניתן לפתוח את אפליקציית המייל, הועתקה כתובת המייל ללוח",
+    "sendEmail": "שלח אימייל",
+    "couldntOpenWhatsApp": "לא ניתן לפתוח את WhatsApp, הועתק מספר הטלפון ללוח",
+    "messageOnWhatsApp": "הודעה ב-WhatsApp",
+    "businessAddress": "כתובת פיזית של העסק:\n{address},\n{address2}",
+    "deleteAccountDescription": "כדי למחוק את החשבון שלך, אנא צור קשר באמצעות אימייל או WhatsApp.",
+    "lessonURLCopied": "כתובת השיעור הועתקה ללוח",
+    "copyLessonURL": "העתק כתובת השיעור",
+    "joinLesson": "הצטרף לשיעור",
+    "joinLiveLesson": "הצטרף לשיעור חי",
+    "lessonStartsAt": "השיעור מתחיל ב-{dateTime}",
+    "waitingForTeacher": "מורה יוקצה לך בקרוב, אנא המתן...",
+    "timeoutException": "פג תוקף הבקשה. אנא נסה שוב מאוחר יותר.",
+    "liveLessonExists": "כבר יש לך שיעור חי פעיל.",
+    "failedToConfirmOrder": "אישור ההזמנה נכשל. אנא נסה שוב.",
+    "cantCancelAlreadyStarted": "לא ניתן לבטל שיעור שכבר התחיל.",
+    "lessonAlreadyAccepted": "שיעור זה כבר התקבל על ידי מורה."
 }
